Add Terraform GitHub Actions workflow and setup

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 .terraform.lock.hcl
 *.tfstate
 *.tfstate.backup
+*.tfvars
+# This is a good practice to avoid exposing your AWS credentials if you're using them.
+.aws/credentials
+# EC2 key pair file
+ec2-new-key.pem
