--- a/.github/workflows/terraform-ci-cd.yml
+++ b/.github/workflows/terraform-ci-cd.yml
@@ -4,10 +4,12 @@
 name: 'Terraform CI/CD'
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch: # Manually trigger the workflow from the Actions tab in GitHub.
 
+#on:
+  #push:
+    #branches:
+      #- main
 # Define a concurrency group to cancel older, in-progress runs when a new one starts.
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
